[gd_scene load_steps=16 format=3 uid="uid://dhs5m5i072l1f"]

[ext_resource type="Script" path="res://addons/sky_3d/src/Sky3D.gd" id="1_u1k4d"]
[ext_resource type="Terrain3DMaterial" uid="uid://w5fselohowoy" path="res://data/Material.tres" id="2_v4rrf"]
[ext_resource type="Script" path="res://addons/sky_3d/src/Skydome.gd" id="2_ya7n7"]
[ext_resource type="Terrain3DAssets" uid="uid://br034h8sli16a" path="res://data/Assets.tres" id="3_6hytq"]
[ext_resource type="Script" path="res://addons/sky_3d/src/TimeOfDay.gd" id="3_g23vr"]
[ext_resource type="PackedScene" uid="uid://chipx2tjg2f0q" path="res://components/Rocket.tscn" id="6_dvl7w"]
[ext_resource type="Script" path="res://scripts/camera/CameraManager.gd" id="7_j3nll"]
[ext_resource type="Script" path="res://scripts/camera/CameraMount.gd" id="8_yqfhd"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="9_tqrtv"]
[ext_resource type="Script" path="res://scripts/Controller.gd" id="10_xbp5v"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_gh086"]
use_debanding = false

[sub_resource type="Sky" id="Sky_nsax2"]
sky_material = SubResource("PhysicalSkyMaterial_gh086")

[sub_resource type="Environment" id="Environment_khs3j"]
background_mode = 2
sky = SubResource("Sky_nsax2")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 2
tonemap_mode = 3
tonemap_white = 6.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_m6ao0"]

[sub_resource type="Compositor" id="Compositor_irtk6"]

[node name="Main" type="Node3D"]

[node name="Sky3D" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_khs3j")
camera_attributes = SubResource("CameraAttributesPractical_m6ao0")
compositor = SubResource("Compositor_irtk6")
script = ExtResource("1_u1k4d")
enable_editor_time = false
current_time = 12.0

[node name="SunLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.999464, -0.0327504, -0.628456, -0.0254747, 0.777428, -0.777845, 0.0205822, -0.628119, -0.0327503, 0.777428, -0.628119)
shadow_enabled = true

[node name="MoonLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.501152, -0.865359, 0.788412, -0.532324, 0.308283, -0.615148, -0.682259, 0.395114, -0.865359, 0.308283, 0.395114)
light_color = Color(0.572549, 0.776471, 0.956863, 1)
light_energy = 0.0
shadow_enabled = true

[node name="Skydome" type="Node" parent="Sky3D"]
script = ExtResource("2_ya7n7")
sky_visible = true
dome_radius = 10.0
tonemap_level = 0.0
exposure = 1.3
ground_color = Color(0.3, 0.3, 0.3, 1)
sky_layers = 4
sky_render_priority = -128
horizon_level = 0.0
sun_altitude = 38.9743
sun_azimuth = 182.985
sun_disk_color = Color(0.996094, 0.541334, 0.140076, 1)
sun_disk_intensity = 2.0
sun_disk_size = 0.015
sun_light_path = NodePath("")
sun_light_color = Color(1, 1, 1, 1)
sun_horizon_light_color = Color(0.98, 0.523, 0.294, 1)
sun_light_energy = 1.0
moon_altitude = 136.127
moon_azimuth = 0.703216
moon_color = Color(1, 1, 1, 1)
moon_size = 0.07
enable_set_moon_texture = false
moon_resolution = 2
moon_light_path = NodePath("")
moon_light_color = Color(0.572549, 0.776471, 0.956863, 1)
moon_light_energy = 0.3
deep_space_euler = Vector3(1.29154, 3.14159, 1.31353)
background_color = Color(0.709804, 0.709804, 0.709804, 0.854902)
set_background_texture = false
stars_field_color = Color(1, 1, 1, 1)
set_stars_field_texture = false
stars_scintillation = 0.75
stars_scintillation_speed = 0.01
atm_quality = 1
atm_wavelenghts = Vector3(680, 550, 440)
atm_darkness = 0.5
atm_sun_intensity = 18.0
atm_day_tint = Color(0.807843, 0.909804, 1, 1)
atm_horizon_light_tint = Color(0.980392, 0.635294, 0.462745, 1)
atm_enable_moon_scatter_mode = false
atm_night_tint = Color(0.168627, 0.2, 0.25098, 1)
atm_level_params = Vector3(1, 0, 0)
atm_thickness = 0.7
atm_mie = 0.07
atm_turbidity = 0.001
atm_sun_mie_tint = Color(1, 1, 1, 1)
atm_sun_mie_intensity = 1.0
atm_sun_mie_anisotropy = 0.8
atm_moon_mie_tint = Color(0.137255, 0.184314, 0.292196, 1)
atm_moon_mie_intensity = 0.7
atm_moon_mie_anisotropy = 0.8
fog_visible = true
fog_atm_level_params_offset = Vector3(0, 0, -1)
fog_density = 0.00015
fog_rayleigh_depth = 0.116
fog_mie_depth = 0.0001
fog_falloff = 3.0
fog_start = 0.0
fog_end = 1000.0
fog_layers = 524288
fog_render_priority = 123
clouds_thickness = 1.7
clouds_coverage = 0.5
clouds_absorption = 2.0
clouds_sky_tint_fade = 0.5
clouds_intensity = 10.0
clouds_size = 2.0
clouds_uv = Vector2(0.16, 0.11)
clouds_direction = Vector2(0.25, 0.25)
clouds_speed = 0.07
set_clouds_texture = false
clouds_cumulus_visible = true
clouds_cumulus_day_color = Color(0.823529, 0.87451, 1, 1)
clouds_cumulus_horizon_light_color = Color(0.98, 0.43, 0.15, 1)
clouds_cumulus_night_color = Color(0.090196, 0.094118, 0.129412, 1)
clouds_cumulus_thickness = 0.0243
clouds_cumulus_coverage = 0.55
clouds_cumulus_absorption = 2.0
clouds_cumulus_noise_freq = 2.7
clouds_cumulus_intensity = 1.0
clouds_cumulus_mie_intensity = 1.0
clouds_cumulus_mie_anisotropy = 0.206
clouds_cumulus_size = 0.5
clouds_cumulus_direction = Vector3(0.25, 0.1, 0.25)
clouds_cumulus_speed = 0.05
set_clouds_cumulus_texture = false
environment = SubResource("Environment_khs3j")

[node name="TimeOfDay" type="Node" parent="Sky3D"]
script = ExtResource("3_g23vr")
update_in_editor = false
dome_path = NodePath("../Skydome")
system_sync = false
total_cycle_in_minutes = 15.0
total_hours = 12.0
day = 3
month = 1
year = 2025
celestials_calculations = 1
compute_moon_coords = true
compute_deep_space_coords = true
latitude = 16.0
longitude = 108.0
utc = 7.0
celestials_update_time = 0.0

[node name="Terrain3D" type="Terrain3D" parent="."]
data_directory = "res://data"
material = ExtResource("2_v4rrf")
assets = ExtResource("3_6hytq")
save_16_bit = true
collision_mode = 3
cull_margin = 1000.0
show_checkered = true
top_level = true
metadata/_edit_lock_ = true

[node name="GroundFar" type="Node3D" parent="." node_paths=PackedStringArray("look_at_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 21)
script = ExtResource("8_yqfhd")
look_at_node = NodePath("../Rocket")

[node name="GroundClose" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0.0575242, 1.08119)
script = ExtResource("8_yqfhd")
look_at_target = false

[node name="GroundMed" type="Node3D" parent="." node_paths=PackedStringArray("look_at_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.051447, 0.998676, 3)
script = ExtResource("8_yqfhd")
look_at_target = false
follow_speed = 10.0
look_at_node = NodePath("../Rocket")

[node name="CameraManager" type="Node3D" parent="." node_paths=PackedStringArray("mounts")]
script = ExtResource("7_j3nll")
mounts = [NodePath("../GroundClose"), NodePath("../GroundMed"), NodePath("../Rocket/EngineView"), NodePath("../Rocket/Overview"), NodePath("../Rocket/CameraAttachedDown"), NodePath("../GroundFar")]

[node name="Camera" type="Camera3D" parent="CameraManager"]

[node name="Rocket" parent="." instance=ExtResource("6_dvl7w")]
physics_interpolation_mode = 1
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 1.0

[node name="CameraAttachedDown" type="Node3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.0519982, 0.121872)
script = ExtResource("8_yqfhd")
look_at_target = false

[node name="Overview" type="Node3D" parent="Rocket" node_paths=PackedStringArray("look_at_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.051447, 0.998676, 3)
script = ExtResource("8_yqfhd")
disconnected_follow = true
follow_speed = 10.0
look_at_node = NodePath("..")

[node name="EngineView" type="Node3D" parent="Rocket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
script = ExtResource("8_yqfhd")

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("rocket")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_tqrtv")
rocket = NodePath("../Rocket")

[node name="Layout" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TopBar" type="ProgressBar" parent="Control/Layout"]
layout_mode = 2

[node name="Split" type="HBoxContainer" parent="Control/Layout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="Control/Layout/Split"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="RichTextLabel" parent="Control/Layout/Split/LeftPanel"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "Flight Data"
fit_content = true
scroll_active = false

[node name="Spacer" type="Control" parent="Control/Layout/Split/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Description" type="RichTextLabel" parent="Control/Layout/Split/LeftPanel"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "Description"
fit_content = true
scroll_active = false

[node name="RightPanel" type="VBoxContainer" parent="Control/Layout/Split"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="RichTextLabel" parent="Control/Layout/Split/RightPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "Engine Status"
fit_content = true
scroll_active = false
text_direction = 2

[node name="Controller" type="Node" parent="." node_paths=PackedStringArray("camera_manager", "rocket", "ui")]
script = ExtResource("10_xbp5v")
camera_manager = NodePath("../CameraManager")
rocket = NodePath("../Rocket")
ui = NodePath("../Control")
